--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"emmanuuelserver123.aternos.me.aternos.me",
+	"ip":"emmanuuelserver123.aternos.me",
 	"port": "25565",
 	"name": "NRBot",
 	"auto-night-skip":"false"
