--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"emmanuuelserver123.aternos.me",
 	"port": "25565",
-	"name": "NRBot",
+	"name": "joshuabot123",
 	"auto-night-skip":"false"
 }
