--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"emmanuel.ga",
+	"ip":"Emmanuuelserver123.aternos.me",
 	"port": "55710",
 	"name": "joshuabot123",
 	"auto-night-skip":"true"
