--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"emmanuuelserver123.aternos.me",
-	"port": "55710",
+	"ip":"rtis-server.ml",
+	"port": "18474",
 	"name": "joshuabot123",
 	"auto-night-skip":"true"
 }
