--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"rtis-server.ml",
 	"port": "18474",
-	"name": "joshuabot123",
+	"name": "joshuabot1fgggg23",
 	"auto-night-skip":"false"
 }
